tests/parsing/smtlib/mcil/errors/267_check-system_missing_system_name.expected
File "tests/parsing/smtlib/mcil/errors/267_check-system_missing_system_name.mcil", line 1, character 13-14:
1 | (check-system)
                 ^
Error while parsing a check-system command, read a closing parenthesis,
      but expected a symbol corresponding to a defined system.
